manifest/deployment.yaml
# Reference: https://kubernetes.io/ja/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  # Deployment name 
  name: nginx-deployment
spec:
  selector:
    # Target pod label
    matchLabels:
      app: nginx-pod
  # Copied pod number
  replicas: 2
  # Wait 0 second
  minReadySeconds: 0
  # Deadline time is 600 second
  progressDeadlineSeconds: 600
  # RollingUpdate
  strategy:
    type: RollingUpdate
  # Pod template
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      # Container specification
      containers:
      - name: nginx-container
        image: nginx:1.14.2
        # If image is not exist, imagePull is executed
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
